Create page basic layout and stylesheet.

--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,8 +1,6 @@
 <footer>
   <ul class="footer-links">
-    <li>MIT License</li>
-    <li class="muted">&middot;</li>
-    <li>Powered by <a href="http://robfig.github.io/revel/" target="_blank">Revel</a></li>
+    <li><a href="http://opensource.org/licenses/mit-license.php" target="_blank">MIT License</a></li>
     <li class="muted">&middot;</li>
     <li><a href="http://memcached.org" target="_blank">Memcached.org</a></li>
     <li class="muted">&middot;</li>
