--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,16 +1,26 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" href="/">Go Memcached Admin</a>
     </div>
     <div class="collapse navbar-collapse navbar-right">
       <ul class="nav navbar-nav">
       </ul>
+    </div>
+  </div>
+</div>
+<div class="subnavbar navbar-fixed-top">
+  <div class="subnavbar-inner">
+    <div class="container">
+      <a class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
+        <i class="icon-record"></i>
+      </a>
+      <div class="subnav-collapse">
+        <ul class="mainnav">
+          <li class="active"><a href="/#!/server"><i class="glyphicon glyphicon-home"></i><span>Server</span></a></li>
+          <li><a href="/#!/slab"><i class="glyphicon glyphicon-hdd"></i><span>Slab</span></a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
