Construct basic frontend environment.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 </div>
-<div class="subnavbar navbar-fixed-top">
+<div class="subnavbar navbar-fixed-top" ng-controller="NavCtrl">
   <div class="subnavbar-inner">
     <div class="container">
       <a class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
@@ -17,8 +17,8 @@
       </a>
       <div class="subnav-collapse">
         <ul class="mainnav">
-          <li class="active"><a href="/#!/server"><i class="glyphicon glyphicon-home"></i><span>Server</span></a></li>
-          <li><a href="/#!/slab"><i class="glyphicon glyphicon-hdd"></i><span>Slab</span></a></li>
+          <li class="active"><a href="/#/server"><i class="glyphicon glyphicon-home"></i><span>Server</span></a></li>
+          <li><a href="/#/slab"><i class="glyphicon glyphicon-hdd"></i><span>Slab</span></a></li>
         </ul>
       </div>
     </div>
