Add Highcharts libary and render stats charts.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,6 +32,7 @@
     <script src="/public/js/bootstrap.js"></script>
     <script src="/public/js/angular.js"></script>
     <script src="/public/js/angular-route.js"></script>
+    <script src="/public/js/highcharts.js"></script>
     <script src="/public/js/app.js"></script>
   </body>
 </html>
