Add Live tab. Use 'Open Sans' as default font.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -23,6 +23,9 @@
           <li ng-class="navClass('/slab')">
             <a href="/#/slab"><i class="glyphicon glyphicon-hdd"></i><span>Slab</span></a>
           </li>
+          <li ng-class="navClass('/live')">
+            <a href="/#/live"><i class="glyphicon glyphicon-play"></i><span>Live</span></a>
+          </li>
         </ul>
       </div>
     </div>
