--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="/public/css/bootstrap.css">
     <link rel="stylesheet" href="/public/css/app.css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
     <script src="/public/js/modernizr.js"></script>
   </head>
@@ -26,6 +27,9 @@
     </script>
     <script type="text/ng-template" id="/tpl/slab.html">
 {{template "templates/slab.html" .}}
+    </script>
+    <script type="text/ng-template" id="/tpl/live.html">
+{{template "templates/live.html" .}}
     </script>
 
     <script src="/public/js/jquery.js"></script>
