--- a/app/views/templates/server.html
+++ b/app/views/templates/server.html
@@ -74,7 +74,7 @@
   <div class="col-md-4">
     <div class="widget widget-table">
       <div class="widget-header">
-        <span class="glyphicon glyphicon-dashboard"></span>
+        <span class="glyphicon glyphicon-time"></span>
         <h3>Resource Usage</h3>
       </div>
       <div class="widget-content">
