--- a/public/src/css/app.less
+++ b/public/src/css/app.less
@@ -216,6 +216,40 @@ body {
           border-bottom: none;
         }
       }
+
+      &.table-bordered {
+        thead tr {
+          background-image: -webkit-gradient(linear, left 0%, left 100%, from(#f5f5f5), to(#e2e2e2));
+          background-image: -webkit-linear-gradient(top, #f5f5f5, 0%, #e2e2e2, 100%);
+          background-image: -moz-linear-gradient(top, #f5f5f5 0%, #e2e2e2 100%);
+          background-image: linear-gradient(to bottom, #f5f5f5 0%, #e2e2e2 100%);
+          background-repeat: repeat-x;
+
+          th {
+            padding-top: 8px;
+            padding-bottom: 8px;
+            font-size: 13px;
+            font-weight: 600;
+            color: #444;
+            border-left: 1px solid #F1F1F1;
+            border-right: 1px solid #CCC;
+            -webkit-box-shadow: inset 0 1px 0 #ffffff;
+            box-shadow: inset 0 1px 0 #ffffff;
+          }
+        }
+      }
+
+      &.table-hover {
+        tr:hover td {
+          color: #ff9900;
+          cursor: pointer;
+        }
+
+        tr.active {
+          color: #ff9900;
+          background-color: #f5f5f5;
+        }
+      }
     }
   }
 
@@ -287,7 +321,7 @@ body {
 
       .value {
         font-size: 56px;
-        font-weight: bold;
+        font-weight: normal;
         color: #333333;
         line-height: 1em;
       }
