--- a/app/views/templates/slab.html
+++ b/app/views/templates/slab.html
@@ -71,7 +71,7 @@
     <div class="widget widget-chart">
       <div class="widget-header">
         <span class="glyphicon glyphicon-stats"></span>
-        <h3>Slab #<span>1</span> Requests &amp; Memory</h3>
+        <h3>Slab #<span ng-bind="slabIndex + 1"></span> Requests &amp; Memory</h3>
       </div>
       <div class="widget-content">
         <div class="chart-container" ng-model="slabsStats" chart-stats-slab></div>
