--- a/app/views/templates/live.html
+++ b/app/views/templates/live.html
@@ -1,2 +1,88 @@
-
-
+<div class="row" ng-if="ready()">
+  <div class="col-md-6">
+    <div class="widget widget-chart">
+      <div class="widget-header">
+        <span class="glyphicon glyphicon-stats"></span>
+        <h3>Memory</h3>
+      </div>
+      <div class="widget-content">
+        <div class="chart-container" chart-stats-live="memStatsLive"></div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="widget widget-chart">
+      <div class="widget-header">
+        <span class="glyphicon glyphicon-stats"></span>
+        <h3>Network</h3>
+      </div>
+      <div class="widget-content">
+        <div class="chart-container" chart-stats-live="IOStatsLive"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row" ng-if="ready()">
+  <div class="col-md-6">
+    <div class="widget widget-chart">
+      <div class="widget-header">
+        <span class="glyphicon glyphicon-stats"></span>
+        <h3>Connections</h3>
+      </div>
+      <div class="widget-content">
+        <div class="chart-container"></div>
+        <div class="chart-container" chart-stats-live="connStatsLive"></div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="widget widget-chart">
+      <div class="widget-header">
+        <span class="glyphicon glyphicon-stats"></span>
+        <h3>Items</h3>
+      </div>
+      <div class="widget-content">
+        <div class="chart-container" chart-stats-live="itemStatsLive"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row" ng-if="ready()">
+  <div class="col-md-12">
+    <div class="widget widget-chart">
+      <div class="widget-header">
+        <span class="glyphicon glyphicon-stats"></span>
+        <h3>Requests</h3>
+      </div>
+      <div class="widget-content">
+        <div class="chart-container" chart-stats-live="reqStatsLive"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row" ng-if="ready()">
+  <div class="col-md-12">
+    <div class="widget widget-chart">
+      <div class="widget-header">
+        <span class="glyphicon glyphicon-stats"></span>
+        <h3>Hit Rate</h3>
+      </div>
+      <div class="widget-content">
+        <div class="chart-container" chart-stats-live="hitRateStatsLive"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row" ng-if="ready()">
+  <div class="col-md-12">
+    <div class="widget widget-chart">
+      <div class="widget-header">
+        <span class="glyphicon glyphicon-stats"></span>
+        <h3>Evictions &amp; Reclaimed</h3>
+      </div>
+      <div class="widget-content">
+        <div class="chart-container" chart-stats-live="ERStatsLive"></div>
+      </div>
+    </div>
+  </div>
+</div>
