Add NProgress to visualize loading progress.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,7 @@
   <body ng-cloak ng-app="gmcadmin">
     {{template "header.html" .}}
     <div class="container">
-      <div ng-view></div>
+      <div ng-view style="min-height: 600px;"></div>
       <hr>
       {{template "footer.html" .}}
     </div>
